[project]
name = "keck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "ninja>=1.13.0",
    "numpy>=2.3.3",
    "orjson==3.10.7",
    "pydantic==2.9.2",
    "python-multipart==0.0.9",
    "ray[default]==2.37.0",
    "torch==2.6",
    "uvicorn[standard]==0.31.1",
]
